# game

./: .clang-format  .gitignore  .help  CHANGELOG  CMakeLists.txt  main.cpp
include/: game.h  game_state.h  input_handler.h  keys.h
include/common/: AI.cpp  AI.h  bezier.cpp  bezier.h  bezier_builder.cpp  bezier_builder.h  melee_attack.h  skills.cpp  skills.h  state_machine.cpp  state_machine.h
include/components/: AI_behavior.h  animation.h  collidable.h  collided.h  collider.h  components.h  damage.h  destroyable_after_hit.h  destroyable_by_time.h  do_damage.h  enemy_spawner.h  health.h  invulnerability.h  player.h  rigid_body.h  shield.h  skill1.h  skill2.h  skill3.h  skill4.h  sprite_render.h  square_render.h  state.h  suffer_damage.h  trajectory_follow.h  transform.h  transform_attach.h
include/helper/: collide.h  color.h  ecs.h  vec2d.h  vector2d.h
include/systems/: AI_system.h  animator.h  clean.h  collision.h  damage_generator.h  destroy.h  destroy_after_hit.h  destroying_by_time.h  enemy_spawning.h  health_damage.h  invulnerability_applier.h  invulnerability_manager.h  physics.h  player_behavior.h  renderer.h  skill_generator.h  sprite_renderer.h  square_renderer.h  systems.h  trajectory_follower.h  transform_attacher.h
py/: Vector2D.py  bezier.py  test.py
src/: .game.cpp.swp  game.cpp  input_handler.cpp
